// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListFormFields renders edit form 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      Name
    </label>
    <input
      class="form-control"
      id="name"
      name="name"
      placeholder="My super cool list"
      type="text"
      value="foo"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="list_item_configuration_id"
    >
      Template
    </label>
    <select
      class="form-control"
      id="list_item_configuration_id"
      name="list_item_configuration_id"
    >
      <option
        value="config-1"
      >
        grocery list template
      </option>
      <option
        value="config-2"
      >
        book list template
      </option>
      <option
        value="config-3"
      >
        music list template
      </option>
    </select>
  </div>
  <div
    class="mb-3 mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="completed"
        name="completed"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="completed"
        title=""
      >
        Completed
      </label>
    </div>
  </div>
</div>
`;

exports[`ListFormFields renders new form 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      Name
    </label>
    <input
      class="form-control"
      id="name"
      name="name"
      placeholder="My super cool list"
      type="text"
      value="foo"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="list_item_configuration_id"
    >
      Template
    </label>
    <select
      class="form-control"
      id="list_item_configuration_id"
      name="list_item_configuration_id"
    >
      <option
        value="config-1"
      >
        grocery list template
      </option>
      <option
        value="config-2"
      >
        book list template
      </option>
      <option
        value="config-3"
      >
        music list template
      </option>
    </select>
  </div>
</div>
`;
